--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/01.md
@@ -84,15 +84,15 @@ unicode_script = "devanagari"
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/05.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-सोऽहमिति॥ सोऽहम्। 'रघूणामन्वयं वक्ष्ये' (1।9) इत्युत्तरेण संबन्धः। किंविधानां रघूणामित्यत्रोत्तराणि विशेषणानि योज्यानि। आ जन्मनः। जन्माभ्येत्यर्थथः। 'आङ् मर्यादाभिविध्योः' (पा.2।1।13) इत्यव्ययीभावः,तस्य शुद्धानामित्यनेन सुप्सुपेति समासः। एवमुत्तरत्रापि द्रष्टव्यम्। आजन्मशुद्धानाम्। निषेकादिसर्वसंस्कारसंपन्नानामित्यर्थथः। आफलोदयम्। आफलसिद्धेः कर्म येषां ते तथोक्तास्तेषाम्। प्रारब्धान्तगामिनामित्यर्थः। आसमुद्रं क्षितेरीशानाम्। सार्वभौमाणामित्यर्थः। आनाकं रथवर्त्म येषां तेषाम्। इन्द्रसहचारिणामित्यर्थः। अत्र सर्वत्राऽऽङोऽभिविध्यर्थत्वं द्रष्टव्यम्। अन्यथा मर्यादार्थत्वे जन्मादिषु शुध्द्यभावप्रसङ्गात् ॥ 5 ॥
+सोऽहमिति॥ सोऽहम्। 'रघूणामन्वयं वक्ष्ये' (1।9) इत्युत्तरेण संबन्धः। किंविधानां रघूणामित्यत्रोत्तराणि विशेषणानि योज्यानि। आ जन्मनः। जन्माभ्येत्यर्थथः। 'आं मर्यादाभिविध्योः' (पा.2।1।13) इत्यव्ययीभावः,तस्य शुद्धानामित्यनेन सुप्सुपेति समासः। एवमुत्तरत्रापि द्रष्टव्यम्। आजन्मशुद्धानाम्। निषेकादिसर्वसंस्कारसंपन्नानामित्यर्थथः। आफलोदयम्। आफलसिद्धेः कर्म येषां ते तथोक्तास्तेषाम्। प्रारब्धान्तगामिनामित्यर्थः। आसमुद्रं क्षितेरीशानाम्। सार्वभौमाणामित्यर्थः। आनाकं रथवर्त्म येषां तेषाम्। इन्द्रसहचारिणामित्यर्थः। अत्र सर्वत्राऽऽङोऽभिविध्यर्थत्वं द्रष्टव्यम्। अन्यथा मर्यादार्थत्वे जन्मादिषु शुध्द्यभावप्रसङ्गात् ॥ 5 ॥
 </details>
 </div>
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-यथाविधि-हुताग्नीनाय्ँ  
+यथाविधि-हुताग्नीनां  
 यथाकामार्चितार्थिनाम् ।  
-यथापराधदण्डानाय्ँ  
+यथापराधदण्डानां  
 यथाकाल-प्रभोधिनाम् ॥ ६ ॥    
 </details>
 
@@ -120,9 +120,9 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-शैशवे ऽभ्यस्त-विद्यानाय्ँ  
+शैशवे ऽभ्यस्त-विद्यानां  
 यौवने विषयैषिणाम् ।  
-वार्धके मुनिवृत्तीनाय्ँ  
+वार्धके मुनिवृत्तीनां  
 योगेनान्ते तनुत्यजाम् ॥ ८ ॥    
 </details>
 
@@ -135,7 +135,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-**रघूणाम् अन्वयव्ँ वक्ष्ये**  
+**रघूणाम् अन्वयं वक्ष्ये**  
 तनुवाग्-विभवोऽपि सन् ।  
 तद्गुणैः कर्णमागत्य  
 चापलाय प्रचोदितः ॥ ९ ॥    
@@ -213,7 +213,7 @@ unicode_script = "devanagari"
 
 सर्वातिरिक्त-सारेण  
 सर्व-तेजोऽभिभाविना ।  
-**स्थितः** सर्वोन्नतेनोर्वीङ्  
+**स्थितः** सर्वोन्नतेनोर्वीं  
 **क्रान्त्वा** मेरुर् इवात्मना+++(=शरीरेण)+++ ॥ १४ ॥    
 </details>
 
@@ -302,7 +302,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्य सव्ँवृत-मन्त्रस्य  
+तस्य संवृत-मन्त्रस्य  
 गूढाकारेङ्गितस्य च ।  
 **फलानुमेयाः प्रारम्भाः**  
 संस्काराः प्राक्तना इव ॥ २० ॥    
@@ -362,10 +362,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रजानाव्ँ विनयाधानाद्  
+प्रजानां विनयाधानाद्  
 रक्षणाद् भरणाद् अपि ।  
-**स पिता**, पितरस् तासाङ्  
-केवलञ् जन्म-हेतवः ॥ २४ ॥    
+**स पिता**, पितरस् तासां  
+केवलं जन्म-हेतवः ॥ २४ ॥    
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/24.md">
@@ -438,7 +438,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तव्ँ **वेधा विदधे** नूनम्  
+तं **वेधा विदधे** नूनम्  
 महाभूत-समाधिना ।  
 तथा हि सर्वे **तस्यासन्**  
 **परार्थैक-फला गुणाः** ॥ २९ ॥    
@@ -561,7 +561,7 @@ unicode_script = "devanagari"
 
 स्निग्ध-गम्भीर-निर्घोषम्  
 एकं **स्यन्दनम् आस्थितौ** ।  
-प्रावृषेण्यं+++(=प्रावृषि भवम्)+++ पयोवाहव्ँ  
+प्रावृषेण्यं+++(=प्रावृषि भवम्)+++ पयोवाहं  
 विद्युद्-ऐरावताव् इव ॥ ३६ ॥    
 </details>
 
@@ -606,7 +606,7 @@ unicode_script = "devanagari"
 
 मनोऽभिरामाः **शृण्वन्तौ**  
 रथनेमि-स्वनोन्मुखैः ।  
-षड्ज-सव्ँवादिनीः **केका**  
+षड्ज-संवादिनीः **केका**  
 द्विधा भिन्नाः शिखण्डिभिः ॥ ३९ ॥    
 </details>
 
@@ -664,7 +664,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-सरसीष्व् अरविन्दानाव्ँ  
+सरसीष्व् अरविन्दानां  
 वीचि-विक्षोभ-शीतलम् ।  
 **आमोदम् उपजिघ्रन्तौ**  
 स्वनिःश्वासानुकारिणम् ॥ ४३ ॥    
@@ -747,14 +747,14 @@ unicode_script = "devanagari"
 
 स दुष्प्रापयशाः **प्रापद्**  
 **आश्रमं** श्रान्तवाहनः ।  
-सायं सय्ँयमिनस् तस्य  
+सायं संयमिनस् तस्य  
 महर्षेर् महिषीसखः ॥ ४८ ॥    
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/48.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-स इति॥ दुष्प्रापयशा दुष्प्रापमन्यदुर्लभं यशो यस्य स तथोक्तः। श्रान्तवाहनो दूरोपगमनात्क्लान्तयुग्यः। महिष्याः सखा महिषीसखः। 'राजाहःसखिभ्यष्टच' (पा.5।4।91)इति टच्प्रत्ययः। सहायान्तरनिरपेक्ष इति भावः। स राजा सायं सायंकाले संयमिनो नियमवतस्तस्य महर्षेर्वसिष्ठस्याश्रमं प्रापत् प्राप। पुषादित्वादङ् ॥ 48 ॥
+स इति॥ दुष्प्रापयशा दुष्प्रापमन्यदुर्लभं यशो यस्य स तथोक्तः। श्रान्तवाहनो दूरोपगमनात्क्लान्तयुग्यः। महिष्याः सखा महिषीसखः। 'राजाहःसखिभ्यष्टच' (पा.5।4।91)इति टच्प्रत्ययः। सहायान्तरनिरपेक्ष इति भावः। स राजा सायं सायंकाले संयमिनो नियमवतस्तस्य महर्षेर्वसिष्ठस्याश्रमं प्रापत् प्राप। पुषादित्वादं ॥ 48 ॥
 </details>
 </div>
 
@@ -920,7 +920,7 @@ unicode_script = "devanagari"
 अथाऽथर्वनिधेस् तस्य  
 विजितारिपुरः पुरः ।  
 अर्थ्याम् अर्थपतिर्  
-**वाचम् आददे** वदताव्ँ वरः ॥ ५९ ॥    
+**वाचम् आददे** वदतां वरः ॥ ५९ ॥    
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/59.md">
@@ -934,7 +934,7 @@ unicode_script = "devanagari"
 
 **उपपन्नन्** ननु **शिवं**  
 सप्तस्व् अङ्गेषु यस्य मे ।  
-दैवीनाम् मानुषीणाञ् च  
+दैवीनाम् मानुषीणां च  
 **प्रतिहर्ता त्वम् आपदाम्** ॥ ६० ॥    
 </details>
 
@@ -992,9 +992,9 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-त्वयैवञ् चिन्त्य-मानस्य  
+त्वयैवं चिन्त्य-मानस्य  
 गुरुणा ब्रह्मयोनिना ।  
-**सानुबन्धाः** कथन् न स्युः  
+**सानुबन्धाः** कथं न स्युः  
 **सम्पदो** मे निरापदः ॥ ६४ ॥    
 </details>
 
@@ -1026,7 +1026,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-नूनम् मत्तः परव्ँ **वंश्याः**  
+नूनम् मत्तः परं **वंश्याः**  
 पिण्ड-विच्छेद-दर्शिनः ।  
 **न प्रकाम-भुजः** श्राद्धे  
 स्वधा-सङ्ग्रह-तत्पराः ॥ ६६ ॥    
@@ -1087,8 +1087,8 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तया हीनव्ँ विधातर् माङ्  
-कथम् **पश्यन् न दूयसे** ।  
+तया हीनं विधातर् मां  
+कथम् **पश्यं न दूयसे** ।  
 सिक्तं स्वयम् इव स्नेहाद्  
 वन्ध्यम् आश्रम-वृक्षकम् ॥ ७० ॥    
 </details>
@@ -1118,7 +1118,7 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 **तस्मान् मुच्ये** यथा तात  
-सव्ँविधातुन् तथार्हसि ।  
+संविधातुन् तथार्हसि ।  
 इक्ष्वाकूणान् दुरापेऽर्थे  
 त्वदधीना हि सिद्धयः ॥ ७२ ॥    
 </details>
@@ -1197,7 +1197,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अवजानासि माय्ँ यस्माद्  
+अवजानासि मां यस्माद्  
 अतस् ते न भविष्यति ।  
 मत्-प्रसूतिम् अनाराध्य  
 प्रजेति **त्वां शशाप** सा ॥ ७७ ॥    
@@ -1294,7 +1294,7 @@ unicode_script = "devanagari"
 **ललाटोदयम्** आभुग्नम्  
 पल्लव-स्निग्ध-पाटला ।  
 **बिभ्रती श्वेतरोमाङ्कं**  
-सन्ध्येव शशिनन् नवम् ॥ ८३ ॥    
+सन्ध्येव शशिनं नवम् ॥ ८३ ॥    
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/83.md">
@@ -1306,7 +1306,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भुवङ् कोष्णेन कुण्डोध्नी  
+भुवं कोष्णेन कुण्डोध्नी  
 मेध्येनावभृथाद् अपि ।  
 **प्रस्रवेणाभिवर्षन्ती**  
 वत्सालोक-प्रवर्तिना ॥ ८४ ॥    
@@ -1353,7 +1353,7 @@ unicode_script = "devanagari"
 
 अदूर-वर्तिनीं **सिद्धिं**  
 राजन् **विगणयात्मनः** ।  
-उपस्थितेयङ् कल्याणी  
+उपस्थितेयं कल्याणी  
 नाम्नि कीर्तित एव यत् ॥ ८७ ॥    
 </details>
 
@@ -1409,7 +1409,7 @@ unicode_script = "devanagari"
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/90.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-वधूरिति॥ वधूर्जाया च भक्तिमती प्रयता सती गन्धादिभिरर्चितामेनां गां प्रातरा तपोवनात्। आङ् मर्यादायाम्। पदद्वयं चैतत्। अन्वेत्वनुगच्छतु। सायमपि प्रत्युद्व्रजेत् प्रत्युद्गच्छेत्। विध्यर्थे लिङ् ॥ 90 ॥
+वधूरिति॥ वधूर्जाया च भक्तिमती प्रयता सती गन्धादिभिरर्चितामेनां गां प्रातरा तपोवनात्। आं मर्यादायाम्। पदद्वयं चैतत्। अन्वेत्वनुगच्छतु। सायमपि प्रत्युद्व्रजेत् प्रत्युद्गच्छेत्। विध्यर्थे लिं ॥ 90 ॥
 </details>
 </div>
 
@@ -1424,7 +1424,7 @@ unicode_script = "devanagari"
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/91.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-इतीति॥ इत्यनेन प्रकारेण त्वमा प्रसादात् प्रसादपर्यन्तम्। 'आङ् मर्यादाभिविध्योः' (पा.2।1।13) इत्यस्य वैभाषिकत्वादसमासत्वम्। अस्या धेनोः परिचर्यापरः शुश्रूषापरो भवः; ते तवाविघ्नं विघ्नस्याभावोऽस्तु। 'अव्ययं विभक्ति-'(पा.2।1।6)इत्यादिनार्थाभावेऽव्ययीभावः। पितेव पुत्रिणां सत्पुत्रवताम्। प्रशंसायामिनिप्रत्ययः। धुर्यग्रे स्थेयास्तिष्ठेः। आशीरर्थे लिङ्। 'एर्लिङि'(पा.6।4।67) इत्याकारस्यैकारादेशः। त्वत्सदृशो भवत्पुत्रोऽस्त्विति भावः॥ 91 ॥
+इतीति॥ इत्यनेन प्रकारेण त्वमा प्रसादात् प्रसादपर्यन्तम्। 'आं मर्यादाभिविध्योः' (पा.2।1।13) इत्यस्य वैभाषिकत्वादसमासत्वम्। अस्या धेनोः परिचर्यापरः शुश्रूषापरो भवः; ते तवाविघ्नं विघ्नस्याभावोऽस्तु। 'अव्ययं विभक्ति-'(पा.2।1।6)इत्यादिनार्थाभावेऽव्ययीभावः। पितेव पुत्रिणां सत्पुत्रवताम्। प्रशंसायामिनिप्रत्ययः। धुर्यग्रे स्थेयास्तिष्ठेः। आशीरर्थे लिङ्। 'एर्लिङि'(पा.6।4।67) इत्याकारस्यैकारादेशः। त्वत्सदृशो भवत्पुत्रोऽस्त्विति भावः॥ 91 ॥
 </details>
 </div>
 
@@ -1446,7 +1446,7 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथ प्रदोषे दोषज्ञः +++(वसिष्ठः)+++  
-**सव्ँवेशाय** विशाम् पतिम् ।  
+**संवेशाय** विशाम् पतिम् ।  
 सूनुः सूनृत+++(=सत्य-प्रिय)+++-वाक्-स्रष्टुर्  
 **विससर्जोर्जित-श्रियम्** ॥ ९३ ॥    
 </details>
@@ -1463,7 +1463,7 @@ unicode_script = "devanagari"
 सत्याम् अपि तपःसिद्धौ  
 नियमापेक्षया **मुनिः** ।  
 कल्प-वित् **कल्पयाम् आस**  
-वन्याम् एवास्य **सव्ँविधाम्** ॥ ९४ ॥    
+वन्याम् एवास्य **संविधाम्** ॥ ९४ ॥    
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/94.md">
@@ -1476,10 +1476,10 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 +++(प्रहर्षिणी वृत्तम्)+++  
-निर्दिष्टाङ् कुलपतिना स **पर्ण-शालाम्**  
+निर्दिष्टां कुलपतिना स **पर्ण-शालाम्**  
 **अध्यास्य** प्रयत-परिग्रह-द्वितीयः ।  
 तच्-छिष्याध्ययन-निवेदितावसानां  
-सव्ँविष्टः कुश-शयने **निशान् निनाय** ॥ ९५ ॥    
+संविष्टः कुश-शयने **निशां निनाय** ॥ ९५ ॥    
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/01/95.md">
