--- a/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
+++ b/laxyam/padyam/kAlidAsaH/raghuvaMsham/sarva-prastutiH/02.md
@@ -21,7 +21,7 @@ unicode_script = "devanagari"
 
 अथ प्रजानाम् **अधिपः** प्रभाते  
 जाया-प्रतिग्राहित-गन्ध-माल्यम्।  
-**वनाय** पीत-प्रतिबद्ध-वत्साय्ँ  
+**वनाय** पीत-प्रतिबद्ध-वत्सां  
 यशोधनो **धेनुम्** ऋषेर् **मुमोच** ॥ १ ॥  
 </details>
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/01.md">
@@ -50,7 +50,7 @@ unicode_script = "devanagari"
 
 **निवर्त्य राजा** दयितान् दयालुस्  
 **तां** सौरभेयीं सुरभिर्+++(=मनोज्ञः)+++ यशोभिः ।  
-पयो-धरी-भूत-चतुः-समुद्राञ् +++(उर्वीं)+++  
+पयो-धरी-भूत-चतुः-समुद्रां +++(उर्वीं)+++  
 **जुगोप** गोरूप-धराम् इवोर्वीम् ॥ ३ ॥  
 </details>
 
@@ -98,7 +98,7 @@ unicode_script = "devanagari"
 
 स्थितः स्थिताम्, उच्चलितः प्रयातान्,  
 निषेदुषीम् आसन-बन्ध-धीरः ।  
-जलाभिलाषी जलम् आदधानाञ् -  
+जलाभिलाषी जलम् आदधानां -  
 छायेव ताम् **भूपतिर् अन्वगच्छत्** ॥ ६ ॥ +++(र५ अ५)+++    
 </details>
 
@@ -149,7 +149,7 @@ unicode_script = "devanagari"
 विसृष्ट-पार्श्वानुचरस्य तस्य  
 **पार्श्व-द्रुमाः** पाश-भृता+++(=वरुणेन)+++ समस्य ।  
 **उदीरयाम् आसुर्** इवोन्मदानाम्  
-**आलोक-शब्दव्ँ** वयसाव्ँ विरावैः ॥ ९ ॥  
+**आलोक-शब्दं** वयसां विरावैः ॥ ९ ॥  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/09.md">
@@ -195,7 +195,7 @@ unicode_script = "devanagari"
 स कीचकैर् मारुत-पूर्ण-रन्ध्रैः  
 कूजद्भिर् आपादित-वंश-कृत्यम् ।  
 **शुश्राव** कुञ्जेषु **यशस्** स्वम् उच्चैर्  
-उद्गीयमानव्ँ वनदेवताभिः ॥ १२ ॥ +++(5 वंशे श्लेषः)+++  
+उद्गीयमानं वनदेवताभिः ॥ १२ ॥ +++(5 वंशे श्लेषः)+++  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/12.md">
@@ -225,8 +225,8 @@ unicode_script = "devanagari"
 
 **शशाम** वृष्ट्यापि विना **दवाग्निर्**+++(5)+++  
 **आसीद्** विशेषा **फल-पुष्प-वृद्धिः** ।  
-**ऊनन् न** सत्त्वेष्व् **अधिको बबाधे**  
-तस्मिन् वनङ् गोप्तरि गाहमाने ॥ १४ ॥+++(5)+++  
+**ऊनं न** सत्त्वेष्व् **अधिको बबाधे**  
+तस्मिन् वनं गोप्तरि गाहमाने ॥ १४ ॥+++(5)+++  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/14.md">
@@ -286,7 +286,7 @@ unicode_script = "devanagari"
 आपीनभारोद्वहन-प्रयत्नाद्  
 गृष्टिर्+++(=सकृत्प्रसूता गौः)+++, गुरुत्वाद् वपुषो नरेन्द्रः ।  
 उभाव् **अलञ्चक्रतुर् अञ्चिताभ्यान्**  
-तपोवनावृत्ति-पथङ् गताभ्याम् ॥ १८ ॥  
+तपोवनावृत्ति-पथं गताभ्याम् ॥ १८ ॥  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/18.md">
@@ -299,7 +299,7 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 वसिष्ठ-धेनोर् अनुयायिनन् **तम्**  
-आवर्तमानव्ँ वनिता वनान्तात् ।  
+आवर्तमानं वनिता वनान्तात् ।  
 **पपौ** निमेषालस-पक्ष्म-पङ्क्तिर्  
 उपोषिताभ्याम् इव **लोचनाभ्याम्** ॥ १९ ॥ +++(5)+++ 
 </details>
@@ -376,7 +376,7 @@ unicode_script = "devanagari"
 
 ताम् अन्तिक-न्यस्त-बलि-प्रदीपाम्  
 **अन्वास्य** गोप्ता गृहिणीसहायः ।  
-क्रमेण सुप्ताम् **अनुसव्ँविवेश**  
+क्रमेण सुप्ताम् **अनुसंविवेश**  
 सुप्तोत्थिताम् प्रातर् **अनूदतिष्ठत्** ॥ २४ ॥  
 </details>
 
@@ -389,7 +389,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इत्थव्ँ व्रतन् धारयतः प्रजार्थं  
+इत्थं व्रतन् धारयतः प्रजार्थं  
 समम् महिष्या महनीय-कीर्तेः ।  
 सप्त **व्यतीयुस्** त्रिगुणानि तस्य  
 **दिनानि** दीनोद्धरणोचितस्य ॥ २५ ॥  
@@ -404,9 +404,9 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अन्येद्युर् आत्मानुचरस्य भावञ्  
+अन्येद्युर् आत्मानुचरस्य भावं  
 जिज्ञासमाना मुनि-होम-धेनुः ।  
-गङ्गा-प्रपातान्त-विरूढ-शष्पङ्  
+गङ्गा-प्रपातान्त-विरूढ-शष्पं  
 गौरी-गुरोर् **गह्वरम् आविवेश** ॥ २६ ॥  
 </details>
 
@@ -422,7 +422,7 @@ unicode_script = "devanagari"
 सा दुष्-प्रधर्षा मनसापि हिंस्रैर्  
 इत्य् अद्रि-शोभा-प्रहितेक्षणेन ।  
 अलक्षिताभ्युत्पतनो नृपेण  
-प्रसह्य **सिंहः** किल **ताञ् चकर्ष** ॥ २७ ॥  
+प्रसह्य **सिंहः** किल **तां चकर्ष** ॥ २७ ॥  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/27.md">
@@ -509,7 +509,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तम् आर्य-गृह्यन् निगृहीत-धेनुर्  
+तम् आर्य-गृह्यं निगृहीत-धेनुर्  
 **मनुष्य-वाचा** मनु-वंश-केतुम् ।  
 **विस्माययन्** विस्मितम् आत्मवृत्तौ   
 सिंहोरुसत्त्वन् +++(राजानं)+++ **निजगाद सिंहः** ॥ ३३ ॥  
@@ -518,7 +518,7 @@ unicode_script = "devanagari"
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/33.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
 
-तमिति॥ निगृहीता पीडिता धेनुर्येन स सिंहः। आर्याणां सतां गृह्यं पक्ष्यम्। 'पदास्वैरिबाह्यापक्ष्येषु च'(पा.3।1।119) इति क्यप्। मनुवंशस्य केतुं चिह्नं केतुवद्व्यावर्तकम्। सिंह इवोरुसत्त्वो महाबलस्तम्। आत्मनो वृत्तौ बाहुस्तम्भरूपे व्यापारेऽभूतपूर्वत्वाद्विस्मितम्। कर्तरि क्तः। तं दिलीपं मनुष्यवाचा करणेन। पुनर्विस्माययन् स्मयमाश्चर्यं प्रापयन्निजगाद। 'स्मिङ् ईषद्धसने' इति धातोर्णिचि वृद्धावायादेशे शतृप्रत्यये च सति विस्माययन्निति रूपं सिद्धम्। 'विस्मापयन्' इति पाठे पुगागममात्रं वक्यव्यम्। तञ्च 'नित्यं स्मयतेः'(पा.6।1।57) इति हेतुभयविवक्षायामेवेति 'भीस्म्योर्हेतुभये' (पा.1।3।68) इत्यात्मनेपदे विस्मापयमान इति स्यात्। तस्मान्मनुष्यवाचा विस्माययन्निति रूपं सिद्धम्। करणविवक्षायां न कश्चिद्दोषः॥ 33 ॥
+तमिति॥ निगृहीता पीडिता धेनुर्येन स सिंहः। आर्याणां सतां गृह्यं पक्ष्यम्। 'पदास्वैरिबाह्यापक्ष्येषु च'(पा.3।1।119) इति क्यप्। मनुवंशस्य केतुं चिह्नं केतुवद्व्यावर्तकम्। सिंह इवोरुसत्त्वो महाबलस्तम्। आत्मनो वृत्तौ बाहुस्तम्भरूपे व्यापारेऽभूतपूर्वत्वाद्विस्मितम्। कर्तरि क्तः। तं दिलीपं मनुष्यवाचा करणेन। पुनर्विस्माययन् स्मयमाश्चर्यं प्रापयन्निजगाद। 'स्मिं ईषद्धसने' इति धातोर्णिचि वृद्धावायादेशे शतृप्रत्यये च सति विस्माययन्निति रूपं सिद्धम्। 'विस्मापयन्' इति पाठे पुगागममात्रं वक्यव्यम्। तञ्च 'नित्यं स्मयतेः'(पा.6।1।57) इति हेतुभयविवक्षायामेवेति 'भीस्म्योर्हेतुभये' (पा.1।3।68) इत्यात्मनेपदे विस्मापयमान इति स्यात्। तस्मान्मनुष्यवाचा विस्माययन्निति रूपं सिद्धम्। करणविवक्षायां न कश्चिद्दोषः॥ 33 ॥
 </details>
 </div>
 <div caption="वेदभूमिपाठः" class="audioEmbed" src="https://archive.org/download/Raghuvamsha-mUlam-vedabhoomi.org/Raghuvamsha-Sarga02-34-45.mp3"></div>
@@ -540,10 +540,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कैलास-गौरव्ँ वृषम् आरुरुक्षोः  
+कैलास-गौरं वृषम् आरुरुक्षोः  
 पादार्पणानुग्रह-पूत-पृष्टम् ।  
 **अवेहि माङ्** किङ्करम् अष्ट-मूर्तेः  
-कुम्भोदरन् नाम निकुम्भ-मित्रम् ॥ ३५ ॥  
+कुम्भोदरं नाम निकुम्भ-मित्रम् ॥ ३५ ॥  
 </details>
 
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/35.md">
@@ -570,7 +570,7 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कण्डूयमानेन कटङ् कदाचिद्  
+कण्डूयमानेन कटं कदाचिद्  
 वन्य-द्विपेनोन्मथिता त्वग् अस्य ।  
 **अथैनम्** अद्रेस् तनया **शुशोच**  
 सेनान्यम् आलीढम् इवासुरास्त्रैः ॥ ३७ ॥  
@@ -585,9 +585,9 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तदा प्रभृत्य् एव वनद्विपानान्  
-त्रासार्थम् अस्मिन्न् अहम् अद्रिकुक्षौ ।  
-व्यापारितः शूलभृता विधाय  
+तदा प्रभृत्य् एव वन-द्विपानान्  
+**त्रासार्थम्** अस्मिन्न् **अहम्** अद्रि-कुक्षौ ।  
+**व्यापारितः** शूल-भृता विधाय  
 सिंहत्वम् अङ्कागत-सत्त्व-वृत्ति ॥ ३८ ॥
 </details>
 <details><summary>मूलम्</summary>
@@ -605,8 +605,10 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्यालम् एषा क्षुधितस्य तृप्त्यै प्रदिष्टकाला परमेश्वरेण ।  
-उपस्थिता शोणितपारणा मे सुरद्विषश्चान्द्रमसी सुधेव ॥ ३९ ॥
+तस्यालम् **एषा** क्षुधितस्य तृप्त्यै  
+प्रदिष्ट-काला परमेश्वरेण ।  
+**उपस्थिता** शोणित-पारणा मे  
+सुर-द्विषश् चान्द्रमसी सुधेव ॥ ३९ ॥
 </details>
 <details><summary>मूलम्</summary>
 
@@ -622,13 +624,15 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-स त्वन् निवर्तस्व विहाय लज्जाङ् गुरोर्भवान्दर्शितशिष्यभक्तिः ।  
-शस्त्रेण रक्ष्यय्ँ यदशक्यरक्षन् न तद्यशः शस्त्रभृताङ् क्षिणोति ॥ ४० ॥
+**स त्वं निवर्तस्व** विहाय लज्जां  
+गुरोर् भवान् दर्शित-शिष्य-भक्तिः ।  
+शस्त्रेण रक्ष्यं यद् अशक्य-रक्षं  
+न तद् यशः शस्त्र-भृतां क्षिणोति ॥ ४० ॥
 </details>
 <details><summary>मूलम्</summary>
 
-स त्वन् निवर्तस्व विहाय लज्जाङ् गुरोर्भवान्दर्शितशिष्यभक्तिः ।  
-शस्त्रेण रक्ष्यय्ँ यदशक्यरक्षन् न तद्यशः शस्त्रभृताङ् क्षिणोति ॥ ४० ॥
+स त्वं निवर्तस्व विहाय लज्जां गुरोर्भवान्दर्शितशिष्यभक्तिः ।  
+शस्त्रेण रक्ष्यं यदशक्यरक्षं न तद्यशः शस्त्रभृतां क्षिणोति ॥ ४० ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/40.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -677,7 +681,7 @@ unicode_script = "devanagari"
 प्रत्याह वैनं शरमोक्षवन्ध्यो मा पत्त्रपर्वात्स्वरभेदम् आप्तः ।  
 प्रहीणपूर्वध्वनिनाधिरूढस्तुलाम् असारेन शरद्घनेन ॥ ४२* ॥
 
-सर्ँरुद्धचेष्टस्य हेतुः हास्यव्ँ वचस्तद्यदहव्ँ विवक्षुः ।  
+सर्ँरुद्धचेष्टस्य हेतुः हास्यं वचस्तद्यदहं विवक्षुः ।  
 अन्तर्गतम् प्राणभृतां हि वेद सर्वम् भवान्भावम् अतोऽभिधास्ये ॥ ४३ ॥
 </details>
 <details><summary>मूलम्</summary>
@@ -685,7 +689,7 @@ unicode_script = "devanagari"
 प्रत्याह वैनं शरमोक्षवन्ध्यो मा पत्त्रपर्वात्स्वरभेदम् आप्तः ।  
 प्रहीणपूर्वध्वनिनाधिरूढस्तुलाम् असारेन शरद्घनेन ॥ ४२* ॥
 
-सर्ँरुद्धचेष्टस्य हेतुः हास्यव्ँ वचस्तद्यदहव्ँ विवक्षुः ।  
+सर्ँरुद्धचेष्टस्य हेतुः हास्यं वचस्तद्यदहं विवक्षुः ।  
 अन्तर्गतम् प्राणभृतां हि वेद सर्वम् भवान्भावम् अतोऽभिधास्ये ॥ ४३ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/43.md">
@@ -732,12 +736,12 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथान्धकारङ् गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
+अथान्धकारं गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
 भूयः स भूतेश्वरपार्श्ववर्ती किञ्चिद्विहस्यार्थपतिम् बभाषे ॥ ४६ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-अथान्धकारङ् गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
+अथान्धकारं गिरिगह्वराणान् दंष्ट्रामयूखैः शकलानि कुर्वन् ।  
 भूयः स भूतेश्वरपार्श्ववर्ती किञ्चिद्विहस्यार्थपतिम् बभाषे ॥ ४६ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/46.md">
@@ -749,12 +753,12 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-एकातपत्रञ् जगतः प्रभुत्वन् नवय्ँ ययः कान्तम् इदव्ँ वपुश्च ।  
+एकातपत्रं जगतः प्रभुत्वं नवं ययः कान्तम् इदं वपुश्च ।  
 अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-एकातपत्रञ् जगतः प्रभुत्वन् नवय्ँ ययः कान्तम् इदव्ँ वपुश्च ।  
+एकातपत्रं जगतः प्रभुत्वं नवं ययः कान्तम् इदं वपुश्च ।  
 अल्पस्य हेतोर्बहु हातुम् इच्छन्विचारमूधः प्रतिभासि मे त्वम् ॥ ४७ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/47.md">
@@ -766,12 +770,12 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भूतानुकम्पा तव चेदियङ् गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
+भूतानुकम्पा तव चेदियं गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
 जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ पितेव पासि ॥ ४८ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-भूतानुकम्पा तव चेदियङ् गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
+भूतानुकम्पा तव चेदियं गौरेका भवेत्स्वस्तिमती त्वदन्ते ।  
 जीवन्पुनः शश्वदुपप्लवेभ्यः प्रजाः प्रजानाथ पितेव पासि ॥ ४८ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/48.md">
@@ -784,12 +788,12 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 अथैकधेनोरपराधचण्डाद्गुरोः कृषानुप्रतिमाद्बिभेषि ।  
-शक्योऽस्य मन्युर्भवता विनेतुङ् गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
+शक्योऽस्य मन्युर्भवता विनेतुं गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 अथैकधेनोरपराधचण्डाद्गुरोः कृषानुप्रतिमाद्बिभेषि ।  
-शक्योऽस्य मन्युर्भवता विनेतुङ् गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
+शक्योऽस्य मन्युर्भवता विनेतुं गाः कोटिशः स्पर्शयता घटोध्नीः ॥ ४९ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/49.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -868,12 +872,12 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-कथन् नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
+कथं नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
 इमाम् अनूनां सुरभेरवेहि रुद्रौजसा तु पहृतन् त्वयास्याम् ॥ ५४ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-कथन् नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
+कथं नु शक्योऽनुनयो महर्षेर्विश्राणनाच्चान्यपयस्विनीनम्।  
 इमाम् अनूनां सुरभेरवेहि रुद्रौजसा तु पहृतन् त्वयास्याम् ॥ ५४ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/54.md">
@@ -904,12 +908,12 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 भवानपीदम् परवानवैति महान्हि यत्नस्तव देवदारौ ।  
-स्थातुन् नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
+स्थातुं नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 भवानपीदम् परवानवैति महान्हि यत्नस्तव देवदारौ ।  
-स्थातुन् नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
+स्थातुं नियोक्तुर्न हि शक्यम् अग्रे विनाश्य रक्ष्यं स्वयम् अक्षतेन ॥ ५६ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/56.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -920,12 +924,12 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-किम् अप्यहिंस्यस्तव चेन्मतोऽहय्ँ यशःशरीरे भव मे दयालुः ।  
+किम् अप्यहिंस्यस्तव चेन्मतोऽहं यशःशरीरे भव मे दयालुः ।  
 एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-किम् अप्यहिंस्यस्तव चेन्मतोऽहय्ँ यशःशरीरे भव मे दयालुः ।  
+किम् अप्यहिंस्यस्तव चेन्मतोऽहं यशःशरीरे भव मे दयालुः ।  
 एकान्तविधंसिषु मद्विधानाम् पिण्डेष्वनास्था खलु भौतिकेषु ॥ ५७ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/57.md">
@@ -938,12 +942,12 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 सम्बन्धम् आभाषणपूर्वम् आहुर्वृत्तः स नौ सङ्गतयोर्वनान्ते ।  
-तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयव्ँ विहन्तुम् ॥ ५८ ॥
+तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयं विहन्तुम् ॥ ५८ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 सम्बन्धम् आभाषणपूर्वम् आहुर्वृत्तः स नौ सङ्गतयोर्वनान्ते ।  
-तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयव्ँ विहन्तुम् ॥ ५८ ॥
+तद्भूतनाथानुग नार्हसि त्वं सम्बन्धिनो मे प्रणयं विहन्तुम् ॥ ५८ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/58.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -988,13 +992,13 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-उत्तिष्ठ वत्सेत्यमृतायमानव्ँ वचो निशम्योत्थितम् उत्थितः सन् ।  
-ददर्श राजा जननीम् इव स्वाङ् गाम् अग्रतः प्रस्रविणीन् न सिंहम् ॥ ६१ ॥
+उत्तिष्ठ वत्सेत्यमृतायमानं वचो निशम्योत्थितम् उत्थितः सन् ।  
+ददर्श राजा जननीम् इव स्वां गाम् अग्रतः प्रस्रविणीं न सिंहम् ॥ ६१ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-उत्तिष्ठ वत्सेत्यमृतायमानव्ँ वचो निशम्योत्थितम् उत्थितः सन् ।  
-ददर्श राजा जननीम् इव स्वाङ् गाम् अग्रतः प्रस्रविणीन् न सिंहम् ॥ ६१ ॥
+उत्तिष्ठ वत्सेत्यमृतायमानं वचो निशम्योत्थितम् उत्थितः सन् ।  
+ददर्श राजा जननीम् इव स्वां गाम् अग्रतः प्रस्रविणीं न सिंहम् ॥ ६१ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/61.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1005,13 +1009,13 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तव्ँ विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
-ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुङ् किम् उतान्यहिंस्राः ॥ ६२ ॥
+तं विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
+ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुं किम् उतान्यहिंस्राः ॥ ६२ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-तव्ँ विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
-ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुङ् किम् उतान्यहिंस्राः ॥ ६२ ॥
+तं विस्मितन् धेनुरुवाच साधो मायाम् मयोध्भाव्य परीक्षितोऽसि ।  
+ऋषिप्रभावान्मयि नान्तकोऽपि प्रभुः प्रहर्तुं किम् उतान्यहिंस्राः ॥ ६२ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/62.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1022,13 +1026,13 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरव्ँ वृणीष्व ।  
-न केवलानाम् पयसाम् प्रसूतिम् अवेहि माङ् कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
+भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरं वृणीष्व ।  
+न केवलानाम् पयसाम् प्रसूतिम् अवेहि मां कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरव्ँ वृणीष्व ।  
-न केवलानाम् पयसाम् प्रसूतिम् अवेहि माङ् कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
+भक्त्या गुरौ मय्यनुकम्पाय च प्रीतास्मि ते पुत्र वरं वृणीष्व ।  
+न केवलानाम् पयसाम् प्रसूतिम् अवेहि मां कामदुघाम् प्रसन्नाम् ॥ ६३ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/63.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1040,12 +1044,12 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 ततः समानीय समानितार्थी हस्तौ स्वहस्तार्जितवीरशब्दः ।  
-वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयय्ँ ययाचे ॥ ६४ ॥
+वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयं ययाचे ॥ ६४ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 ततः समानीय समानितार्थी हस्तौ स्वहस्तार्जितवीरशब्दः ।  
-वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयय्ँ ययाचे ॥ ६४ ॥
+वंशस्य कर्तारम् अनन्तकीर्तिं सुदक्षिणायान् तनयं ययाचे ॥ ६४ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/64.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1090,12 +1094,12 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-इत्थङ् क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
+इत्थं क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
 तदन्विता हैमवताच्च कुक्षेः प्रत्याययावाश्रमम् अश्रमेण ॥ ६७ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-इत्थङ् क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
+इत्थं क्षितीशेन वसिष्ठधेनुर्विज्ञापिता प्रीततरा बभूव ।  
 तदन्विता हैमवताच्च कुक्षेः प्रत्याययावाश्रमम् अश्रमेण ॥ ६७ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/67.md">
@@ -1107,12 +1111,12 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-तस्याः प्रसन्नेन्दुमुखः प्रसादङ् गुरुर्नृपाणाङ् गुरवे निवेद्य ।  
+तस्याः प्रसन्नेन्दुमुखः प्रसादं गुरुर्नृपाणां गुरवे निवेद्य ।  
 प्रहर्षचिह्नानुमितम् प्रियायै शशंस वाचा पुनरुक्तयेव ॥ ६८ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-तस्याः प्रसन्नेन्दुमुखः प्रसादङ् गुरुर्नृपाणाङ् गुरवे निवेद्य ।  
+तस्याः प्रसन्नेन्दुमुखः प्रसादं गुरुर्नृपाणां गुरवे निवेद्य ।  
 प्रहर्षचिह्नानुमितम् प्रियायै शशंस वाचा पुनरुक्तयेव ॥ ६८ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/68.md">
@@ -1125,12 +1129,12 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 स नन्दिनीस्तन्यम् अनिन्दितात्मा सद्वत्सलो वत्सहुतावशेषम् ।  
-पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रय्ँ यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
+पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रं यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 स नन्दिनीस्तन्यम् अनिन्दितात्मा सद्वत्सलो वत्सहुतावशेषम् ।  
-पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रय्ँ यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
+पपौ वसिष्ठेन कृताभ्यनुज्ञः शुभ्रं यशो मूर्तम् इवातितृष्णः ॥ ६९ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/69.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1158,13 +1162,13 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीञ् च ।  
-धेनुं सवत्साञ् च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
+प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीं च ।  
+धेनुं सवत्सां च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीञ् च ।  
-धेनुं सवत्साञ् च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
+प्रदक्षिणीकृत्य हुतं हुताशम् अनन्तरम् भर्तुररुन्धतीं च ।  
+धेनुं सवत्सां च नृपः प्रतस्थे सन्मङ्गलोदग्रतरप्रभावः ॥ ७१ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/71.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1193,12 +1197,12 @@ unicode_script = "devanagari"
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
 तम् आहितौत्सुक्यम् अदर्शनेन प्रजाः प्रजार्थव्रतकर्शिताङ्गम् ।  
-नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयन् नाथम् इवौषधीनाम् ॥ ७३ ॥
+नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयं नाथम् इवौषधीनाम् ॥ ७३ ॥
 </details>
 <details><summary>मूलम्</summary>
 
 तम् आहितौत्सुक्यम् अदर्शनेन प्रजाः प्रजार्थव्रतकर्शिताङ्गम् ।  
-नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयन् नाथम् इवौषधीनाम् ॥ ७३ ॥
+नेत्रैः पपुस्तृप्तिम् अनाप्नुवद्भिर्नवोदयं नाथम् इवौषधीनाम् ॥ ७३ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/73.md">
 <details><summary><h4>मल्लिनाथः ...{Loading}...</h4></summary>
@@ -1226,12 +1230,12 @@ unicode_script = "devanagari"
 
 <details open><summary>विश्वास-प्रस्तुतिः</summary>
 
-अथ नयनसमुत्थञ् ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
+अथ नयनसमुत्थं ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
 नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥
 </details>
 <details><summary>मूलम्</summary>
 
-अथ नयनसमुत्थञ् ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
+अथ नयनसमुत्थं ज्योतिरत्रेरिव द्यौः सुरसरिदिव तेजो वह्निनिष्ठ्यूतम् ऐशम् ।  
 नरपतिकुलभूत्यै गर्भम् आधत्त राज्ञी गुरुभिरभिनिविष्टल्ँ लोकपालानुभावैः ॥ ७५ ॥
 </details>  
 <div class="js_include collapsed" newlevelforh1="4" title="मल्लिनाथः" unfilled url="/kAvyam/TIkA/padyam/kAlidAsaH/raghuvaMsham/mallinAthaH/02/75.md">
